# Algorythms

./: Algorythms.sln  ClassDiagramm.odg  README.md
Algorythms/: Algorythms.vcxproj  Algorythms.vcxproj.filters  CMakeLists.txt
Algorythms/src/: main.cpp  main.h
Algorythms/src/AlgorythmsStrategies/: AlgorythmStrategy.cpp  AlgorythmStrategy.h
Algorythms/src/AlgorythmsStrategies/Sorting/BubbleSort/: BubbleSortStrategy.h
Algorythms/src/AlgorythmsStrategies/Sorting/InsertionSort/: InsertionSortStrategy.cpp  InsertionSortStrategy.h
Algorythms/src/AlgorythmsStrategies/Sorting/MergeSort/: MergeSortStrategy.cpp  (+1 more)
Algorythms/src/BusinessLayer/AlgorythmsStrategies/: AlgorythmStrategy.cpp  AlgorythmStrategy.h
Algorythms/src/BusinessLayer/Compositions/: Composition.h
Algorythms/src/BusinessLayer/CompositionsFabrics/: CompositionsFabric.h
Algorythms/src/Compositions/: Composition.cpp  Composition.h
Algorythms/src/CompositionsFabrics/: CompositionsFabric.cpp  CompositionsFabric.h
Algorythms/src/DataLayer/DataSources/: DataSource.h
Algorythms/src/DataLayer/Iterators/: Iterator.h
Algorythms/src/DataLayer/Singletones/: DataSingletone.cpp  DataSingletone.h
Algorythms/src/DataSources/: DataSource.h  DataSourceSingleton.cpp  DataSourceSingleton.h
Algorythms/src/DataSources/ArraySource/: ArraySource.cpp  ArraySource.h  ArraySourceSingleton.cpp  ArraySourceSingleton.h
Algorythms/src/Storage/: Storage.h
Algorythms/src/Storage/ArrayStorage/: ArrayStorage.cpp  ArrayStorage.h
Algorythms/src/Strategies/: Strategy.cpp  Strategy.h
cmake/: CMakeLists.txt
(+50 files in other folders)
